--- a/src/app.css
+++ b/src/app.css
@@ -19,17 +19,12 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 640px;
-  min-height: 100vh;
   padding: 1rem;
+  height: 100%;
 }
 
 #app {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  width: 100vw;
+  flex: 1 0 0;
 }
 
 vbox {
