--- a/src/app.css
+++ b/src/app.css
@@ -63,7 +63,10 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+.filterButton.svelteui-Button-root {
+  height: 100% !important;
+  border-radius: 0 !important;
+}
 button.simple {
   border: none;
   background: none;
